--- a/index.html
+++ b/index.html
@@ -19,13 +19,634 @@
 				 });
 			 });
 		</script>
-
+		<style>
+			
+		.caxtilancopa {
+		display: none;
+		}
+			
+		.nahuatl {
+		display: none;
+		}
+		</style>
 	 </head>
 	 <body>
 		
 		<div class="CanvasDiv">
                 <div id="RendererMain"></div>
 		</div>
+		 
+<div class="caxtilancopa">
+a alguna parte, algún lugar, alguna parte
+a buen tiempo
+a cada uno
+a continuación al instante, enseguida, entonces, luego, más tarde, inmediatamente, luego, después
+A Coruña
+a cual
+a el (ella), a ellos (ellas)
+a espaldas, detrás 
+a esta hora
+a esta parte, a este lado
+a f, primera letra del alfabeto mexicano.
+a la derecha 
+a los lados
+a los pies de 
+a menudo, sin cesar, brevemente
+a mí, me (prefijo)
+a nosotros, nos
+a poco no
+a sus pies
+a través de, por medio de, -mente
+a veces
+a veces, alguna vez, en ocasiones, otras veces
+a vosotros, a ustedes
+a, hacia 
+a, hacia, al
+ababol m, amapola f (papaver rhoeas)
+abacería f, abarrotería f, miscelánea f, lonja f
+abacero, abarrotero
+abad m
+abadesa f
+abadía f, monasterio m, convento m
+abajo, debajo
+abalanzar (nite-)
+aballestar
+abanderado
+abanderado 
+abanderamiento m
+abanderar
+abanicar (nitla-)
+abanico m
+abaratar (nitla-)
+abarca f
+abarcar (nitla-)
+abasto m
+abatanar, golpear madera
+abatible
+abatimiento m
+abceso m
+abdomen m
+abedul m, aliso m (alnus jounllensis)
+abeja f (apis mellifica) 
+abeja reina f
+abeja reina f, abeja mielera f
+abejaruco m (merops apiaster)
+abejorro m jicote m (apis bombus)
+abertura de la boca f
+abertura de llaga f, llaga f, úlcera f
+abertura f, sorteo m
+abeto blanco m (pinus lambertiana), rama de un árbol utilizado en ritos.
+abeto m (abies religiosa) 
+abierto
+ablandado
+ablandar el corazón
+ablandar, entibiar (nitla-)
+abogacía f
+abogado m, gobernante m
+abolición f
+abolidor
+abolir
+abollado
+abolladura f
+abominable
+abominar
+abonado 
+abonar
+abonar la tierra
+abono m
+abono m, composta f
+abortado
+abortar
+aborto m
+abotonar
+abrazado
+abrazador
+abrazar
+abrazar (nite-)
+abrazo m
+ábrego m
+abrelatas m
+abreviado, sintetizado
+abreviar, sintetizar (nitla-)
+abreviatura f, abreviación f
+abrigado
+abrigado, cubierto
+abrigar
+abrigar (nitla-)
+abrigo m
+abril, cuarto mes del calendario gregoriano.
+abrir la boca
+abrir la mano
+abrir los ojos
+abrir, contar (nitla-)
+abrir, perforar (nitla-)
+abrochado
+abrochar (nitla-)
+abrojo m, chicalote m (argemone mexicana)
+abrotoñar, florear (nite-)
+absceso m, tumor canceroso m
+absoluto
+abstinencia f
+abuela f
+abuelo m
+abuelos m
+abuhado
+abundancia f
+abundante
+abundar
+aburrido, aguafiestas
+acabar (nitla-)
+acabar, concluir (nitla-)
+acabar, finalizar, terminar, concluir
+academia f
+acaecer, convertirse, hacerse, ocurrir, suceder
+Acajutla (Lugar junto a las albercas), El Salvador.
+Acalometochtli (Dos conejos de las barcas), dios protector de los navegantes.
+Acamapichtli (Puñado de cañas), rey azteca que gobernó México Tenochtitlan de 1376 a 1391.
+acamaya f, camarón de agua dulce m (penaeus riveti).
+acampanado, bolsudo
+acanalado
+acanalado, ahuecado
+acanalar
+acantilado del mar m
+acantilado m 
+acaparado, coleccionado, almacenado cemana
+acaparador, almacenista, coleccionador
+acaparamiento m, colección f
+acaparar, almacenar, coleccionar
+Acaponeta (Lugar junto al centro de grandes cañas), Nayarit.
+Acapulco (Lugar de las cañotas o Lugar de las grandes cañas), Guerrero.
+acapulqueño
+acariciar (nitla-)
+acarrear
+acarreo m
+acaso
+acatar (nite-)
+Acatlán (Lugar junto a las cañas o cañaverales), Puebla, Hidalgo y Distrito Federal.
+acatólico, apostata, protestante
+Acatzingo (Lugar de las pequeñas cañas o cañitas), Morelos.
+acaudillar
+Acayucan, Acayuca (Lugar donde abundan las cañas), Veracruz e Hidalgo.
+acceso de la ciudad m, puerta de la ciudad f
+acceso m
+accesorio m, objeto personal m
+accesorio personal m
+acedarse, agriar
+acedera f (rumex acetosa)
+aceite m
+aceite m, manteca f
+aceleración f
+acelerar (nitla-)
+acémila f
+aceptar (nitla-)
+aceptar, prometer, hacer petición, rechazar (nitla-)
+acequia f 
+acequia f, canal m, caño m, zanja f, cañería f
+acerca de
+acercamiento m
+acercar
+acercar (nite-)
+acercar, arrimar
+acercarse
+acero m
+acertado
+acertar (nitla-)
+achacoso
+achiote m, almagre vegetal m (bixa orellana)
+acierto m, dicha f
+acocil m, camaroncillo de río m (cammarus montezuamae)
+acocote m
+acocote m, calabazo seco que sirve para sacar el pulque.
+Acolman (Lugar donde se dobla el agua), estado de México.
+Acolmiztli (Brazo de puma), dios del inframundo azteca.
+acomedido, solidario
+acometido 
+acomodarse, ajustarse
+acompañado
+acompañamiento m
+acompañante
+acompañar (nite-)
+acompañar (nitla-)
+acongojado
+acongojar (nite-)
+aconsejado
+aconsejar (nitla-)
+acordar
+acordarse
+acordeón m
+acosado
+acosar (nitla-)
+acoso m
+acostado, echado
+acostarse
+acostarse, torcerse la pared, doblar
+acostumbrado
+acostumbrar
+acrecentar, aumentar (nitla-)
+acreedor
+acribillar, balacear
+acrópolis f
+activo
+acto lésbico m, acto sexual realizado entre mujeres.
+acto m
+Actopan (Lugar sobre la tierra fertil), Hidalgo, Distrito federal y Veracruz.
+actuación f, drama m
+actualmente
+actuar, hacer drama
+acuarela f
+acuarelas f
+acuario m, lugar donde se exhiben animales acuáticos.
+acuario m, pecera f
+acuático
+acuchillar (nitla-)
+acudir, recirrir
+acueducto m
+acuerdo m
+acuerdo m, concilio m
+acumular, henchir
+acusación f
+acusado
+acusante
+acusar (nite-)
+acusar (nitla-)
+adaptado
+adeherir, pegar
+adelantar
+adelante
+adelgazado
+adelgazamiento m
+adelgazar
+adelgazar (nitla-)
+además
+adentro
+aderezado
+aderezar (nitla-)
+aderezo m, crema f
+adicionar, sumar
+adiestrado
+adiestrar, guiar, regir, conducir (nite-)
+adinerado
+adios, hasta luego
+adivinanza f
+adivinar
+adivino de la tierra m, persona que determina el periodo de la siembra y la cosecha.
+adivino m, mago m, gitano m, astrólogo m
+adjetivo m
+adjetivo m 
+adjudicado
+adjudicar (nite-)
+adjudicarse (nite-)
+administración f
+administrador
+administrador m, contador m, contralor m
+administrar
+administrar, alabar, honrar (nite-)
+administrativo
+admirable
+admiración f
+admirar (nite-)
+admitido, recibido
+admitir (nitla-)
+admitir, recibir (nitla-)
+adobar
+adobe m
+adobo m
+adolescencia femenina f
+adolescencia masculina f
+adolorido
+adonde, donde
+adopción f
+adoptado 
+adoptar (nitla-)
+adorable, adorador
+adoración f
+adorar
+adormecer (nitla-)
+adormecer, anestesiar
+adormecido, anestesiado 
+adormecimiento m, nestecia f
+adornado
+adornado, sazonado
+adorno de papel m, gallardete m, estola f
+adorno m
+adorno m, adornado
+aduana f 
+adueñar, poseer, apropiar
+adulterio m 
+adultero, cornudo
+adultero, cornudo, infiel
+adulto
+adultos
+adverbio m
+advertir, contar, disciplinar, doctrinar, informar, narrar, reportar (nitla-) 
+adviento m
+</div>
+
+<div class="nahuatl">
+canah
+yeccan 1
+cecenyaca
+niman 1
+Corunia
+canyepan
+quin-
+cuitlapan 1
+imani
+iyepan
+﻿a
+yacanatli
+tlamac
+ihxipan
+achica
+nech-
+tech-
+anomo
+icxitlantzinco
+-tica
+quimaca
+quemanian
+amech-
+cana
+canapa
+amapotl
+xiuhcaloyan
+xiuhcani
+teoyotica tepachoani
+cihuateoyotica tepachoani
+teoyotica tepacholiztli
+tlani 1
+cuitlaxeloa 1
+tepoztlahuitoloa
+pantlani
+pamitlani
+pantlaniliztli
+pantlania
+aaquetza
+aaquetzalli
+chotia 2
+mecacactli
+malcochca
+cualoniliztli
+huatequi 1
+tlachitlazaqui
+nepilotihuechiliztli
+cuetlaxzahuatl
+cuitlatecomatl
+ilitl
+pipiyolli
+cuauhzayolli
+necuhzayolli
+xicotototl
+xicotli
+camachololiztli
+chipelihuiztli
+tlapohuiliztli
+acxoyatl
+ozocotl
+tlapouhqui
+yamanilli
+yolpapatztia
+yamania
+tepantlahtoliztli
+tepantlahtoani
+amoixnahuatiliztli
+amoixnahuatini
+amoixnahuatia
+tlapatzolli
+tlapatzoliztli
+tlatelchihualoni
+tlatelchihua
+tlalcualitolli
+yetlacualcuanti
+cualitoa
+cuitlazolli
+cuauhzolli
+zanolli
+tlatlaxilia
+tlatlaxiliztli
+totomilihui
+napalolli
+napaloani
+napaloa
+nahuatequi
+tenahuatequiliztli
+amilpampa ehecatl
+tepoztlapoani
+tlailochtilli
+ilochtia
+tlailochtiliztli
+tlaecatzacuililli
+tlayamanixtimani
+eca
+ecatzacuilia
+netlaquentiliztli
+abrilli
+camacholoa
+malpatzoa
+ixaya
+poa
+xapotla 1
+tlatlapilli
+tlapia
+chicalotl
+xochilia
+temalotl
+nohuanyotl
+zahualiztli
+cihtli
+colli
+coltin
+aatenqui
+tlatzotlaquiliztli
+tlalquihuac
+axcahuia
+atlahuinani
+tzopa
+yacauhqui
+tlami
+toltecalli
+mochihua
+Acaxotlan
+Acalometochtli
+Acamapichtli
+acamayatl
+tanatic
+huacaltic
+acaltic
+acaloa
+xaxamacatimani
+acuezcomatl
+cemanalli
+cemanani
+cemanaliztli
+cemana
+Acapolnetlan
+Acapolco
+acapolcatl
+mataca
+zaca
+zacaliztli
+cuix
+ixtilia 1
+Acatlan
+tlalnetoquini
+Acatzinco
+nitemana
+Acayocan
+altepecalocoayan
+calocoayan
+tlacacozcatl
+tlacatlamantli
+xocoya
+tepexocoyolli
+chiahuicayotl
+chiahuitli
+nemocihuiliztli
+acaninotlalia
+yolitl
+ixitta
+huelcaqui
+acalohtli 2
+apantli
+yanon
+axitializtli
+yanonaci
+acitlania
+axitia
+maxitia
+hueytepoztli
+tlapantilli
+ipantilia
+anotztlani
+achiotl
+tlaipantiliztli
+acocilli
+piatztli
+acocotli 1
+Acolmán
+Acolmiztli
+tlachihuac
+tlalnepanhualtiliztli
+aqui 2
+tlatlayeloac
+tetlayeliztli
+tlatlayeni
+tlanica
+huica 1
+tetlocolli
+tlocoltia
+tlatolnamictli
+tlahtolnamiqui
+tlanamiqui
+tlalnamiqui
+acordioni
+tlaicihuitilli
+icihihuia
+tlacihihuiliztli
+motecac
+moteca
+colihui
+ticnemitilli
+ticnemitia
+pilhuilia
+itechtlactoc
+totopotza
+acopaltepetl
+aini
+petlacihuayotl
+ainiliztli
+Atocpan
+ixehuayiliztli
+axcantica
+Ixehuayilia
+tetlapalli
+cuauhtlapaloni
+ahuacoyan
+michacaxitl
+aqui 1
+tepozmacuauhuia
+huellamati
+atiacuihuayan
+tlateixpahuilli
+tlanemililiztli
+potzoa
+tlateixpahuiliztli
+tlateixpahuilli
+tlateixpahuiani
+teilhuia
+teixpohuilia
+yaitlayollo
+tzitzini
+tototza
+ocnepan
+tlacanauhtli
+tlanahuiliztli
+tlacanahua
+canahua 1
+noiuhqui
+tlahtec
+tlaixamilli
+chichihua 2
+tlachichihualiztli
+cetilia
+tlayacatentli
+yacana
+tominyi
+aneh
+zazaniliztli
+tlachixqui 
+tetlamatzin
+tlachixqui
+tocatlacencaquetl
+tlahtohualli
+tetechtilli
+techtia
+techtilia
+tetlamamaquiliztli
+tetlamamacani
+pohuani
+pixcua
+tlamachia
+tetlamamaquilli
+mahuitztic 1
+tlamatzahuiliztli
+itzahuia
+tlacelilli
+huelcactia
+celia 1
+tlachichia
+xamitl
+tlachichitl 1
+ichpocatepitoncayotl
+oquichpilcayotl
+texiuhtlati
+can
+netepitzintiliztli
+netepitzintilli
+piltzintia
+neteotiloani
+neteotiliztli
+teotia
+cochtia
+cochtlaza 1
+tecochtectli
+tecochtecaliztli
+tlaxochimaqui
+tlacencahualli
+amaneapanalli
+tlacencahuatli
+xauhqui
+calixcuacalli
+axcatia
+tetlaximaliztli
+tlaxinqui
+tetlaxinqui
+huehueyi
+huehueyimeh
+cauhtic
+nonotza 1
+huallaliztli
+</div>	 
 		 
 	 </body>
 </html>
