--- a/index.html
+++ b/index.html
@@ -37,309 +37,309 @@
 		</div>
 		 
 <div class="caxtilancopa">
-a alguna parte, algún lugar, alguna parte
+a alguna parte
 a buen tiempo
 a cada uno
-a continuación al instante, enseguida, entonces, luego, más tarde, inmediatamente, luego, después
+a continuación al instante
 A Coruña
 a cual
-a el (ella), a ellos (ellas)
-a espaldas, detrás 
+a el 
+a espaldas
 a esta hora
-a esta parte, a este lado
-a f, primera letra del alfabeto mexicano.
+a esta parte
+a 
 a la derecha 
 a los lados
 a los pies de 
-a menudo, sin cesar, brevemente
-a mí, me (prefijo)
-a nosotros, nos
+a menudo
+a mí
+a nosotros
 a poco no
 a sus pies
-a través de, por medio de, -mente
+a través de
 a veces
-a veces, alguna vez, en ocasiones, otras veces
-a vosotros, a ustedes
-a, hacia 
-a, hacia, al
-ababol m, amapola f (papaver rhoeas)
-abacería f, abarrotería f, miscelánea f, lonja f
-abacero, abarrotero
-abad m
-abadesa f
-abadía f, monasterio m, convento m
-abajo, debajo
-abalanzar (nite-)
+a veces
+a vosotros
+a
+a
+ababol
+abacería 
+abacero
+abad
+abadesa 
+abadía 
+abajo
+abalanzar 
 aballestar
 abanderado
 abanderado 
-abanderamiento m
+abanderamiento
 abanderar
-abanicar (nitla-)
-abanico m
-abaratar (nitla-)
-abarca f
-abarcar (nitla-)
-abasto m
-abatanar, golpear madera
+abanicar 
+abanico
+abaratar 
+abarca 
+abarcar 
+abasto
+abatanar
 abatible
-abatimiento m
-abceso m
-abdomen m
-abedul m, aliso m (alnus jounllensis)
-abeja f (apis mellifica) 
-abeja reina f
-abeja reina f, abeja mielera f
-abejaruco m (merops apiaster)
-abejorro m jicote m (apis bombus)
-abertura de la boca f
-abertura de llaga f, llaga f, úlcera f
-abertura f, sorteo m
-abeto blanco m (pinus lambertiana), rama de un árbol utilizado en ritos.
-abeto m (abies religiosa) 
+abatimiento
+abceso
+abdomen
+abedul
+abeja 
+abeja reina 
+abeja reina 
+abejaruco
+abejorro
+abertura de la boca 
+abertura de llaga 
+abertura 
+abeto blanco
+abeto
 abierto
 ablandado
 ablandar el corazón
-ablandar, entibiar (nitla-)
-abogacía f
-abogado m, gobernante m
-abolición f
+ablandar
+abogacía 
+abogado
+abolición 
 abolidor
 abolir
 abollado
-abolladura f
+abolladura 
 abominable
 abominar
 abonado 
 abonar
 abonar la tierra
-abono m
-abono m, composta f
+abono
+abono
 abortado
 abortar
-aborto m
+aborto
 abotonar
 abrazado
 abrazador
 abrazar
-abrazar (nite-)
-abrazo m
-ábrego m
-abrelatas m
-abreviado, sintetizado
-abreviar, sintetizar (nitla-)
-abreviatura f, abreviación f
+abrazar 
+abrazo
+ábrego
+abrelatas
+abreviado
+abreviar
+abreviatura 
 abrigado
-abrigado, cubierto
+abrigado
 abrigar
-abrigar (nitla-)
-abrigo m
-abril, cuarto mes del calendario gregoriano.
+abrigar 
+abrigo
+abril
 abrir la boca
 abrir la mano
 abrir los ojos
-abrir, contar (nitla-)
-abrir, perforar (nitla-)
+abrir
+abrir
 abrochado
-abrochar (nitla-)
-abrojo m, chicalote m (argemone mexicana)
-abrotoñar, florear (nite-)
-absceso m, tumor canceroso m
+abrochar 
+abrojo
+abrotoñar
+absceso
 absoluto
-abstinencia f
-abuela f
-abuelo m
-abuelos m
+abstinencia 
+abuela 
+abuelo
+abuelos
 abuhado
-abundancia f
+abundancia 
 abundante
 abundar
-aburrido, aguafiestas
-acabar (nitla-)
-acabar, concluir (nitla-)
-acabar, finalizar, terminar, concluir
-academia f
-acaecer, convertirse, hacerse, ocurrir, suceder
-Acajutla (Lugar junto a las albercas), El Salvador.
-Acalometochtli (Dos conejos de las barcas), dios protector de los navegantes.
-Acamapichtli (Puñado de cañas), rey azteca que gobernó México Tenochtitlan de 1376 a 1391.
-acamaya f, camarón de agua dulce m (penaeus riveti).
-acampanado, bolsudo
+aburrido
+acabar 
+acabar
+acabar
+academia 
+acaecer
+Acajutla 
+Acalometochtli 
+Acamapichtli 
+acamaya 
+acampanado
 acanalado
-acanalado, ahuecado
+acanalado
 acanalar
-acantilado del mar m
-acantilado m 
-acaparado, coleccionado, almacenado cemana
-acaparador, almacenista, coleccionador
-acaparamiento m, colección f
-acaparar, almacenar, coleccionar
-Acaponeta (Lugar junto al centro de grandes cañas), Nayarit.
-Acapulco (Lugar de las cañotas o Lugar de las grandes cañas), Guerrero.
+acantilado del mar
+acantilado
+acaparado
+acaparador
+acaparamiento
+acaparar
+Acaponeta 
+Acapulco 
 acapulqueño
-acariciar (nitla-)
+acariciar 
 acarrear
-acarreo m
+acarreo
 acaso
-acatar (nite-)
-Acatlán (Lugar junto a las cañas o cañaverales), Puebla, Hidalgo y Distrito Federal.
-acatólico, apostata, protestante
-Acatzingo (Lugar de las pequeñas cañas o cañitas), Morelos.
+acatar 
+Acatlán 
+acatólico
+Acatzingo 
 acaudillar
-Acayucan, Acayuca (Lugar donde abundan las cañas), Veracruz e Hidalgo.
-acceso de la ciudad m, puerta de la ciudad f
-acceso m
-accesorio m, objeto personal m
-accesorio personal m
-acedarse, agriar
-acedera f (rumex acetosa)
-aceite m
-aceite m, manteca f
-aceleración f
-acelerar (nitla-)
-acémila f
-aceptar (nitla-)
-aceptar, prometer, hacer petición, rechazar (nitla-)
-acequia f 
-acequia f, canal m, caño m, zanja f, cañería f
+Acayucan
+acceso de la ciudad
+acceso
+accesorio
+accesorio personal
+acedarse
+acedera 
+aceite
+aceite
+aceleración 
+acelerar 
+acémila 
+aceptar 
+aceptar
+acequia 
+acequia 
 acerca de
-acercamiento m
+acercamiento
 acercar
-acercar (nite-)
-acercar, arrimar
+acercar 
+acercar
 acercarse
-acero m
+acero
 acertado
-acertar (nitla-)
+acertar 
 achacoso
-achiote m, almagre vegetal m (bixa orellana)
-acierto m, dicha f
-acocil m, camaroncillo de río m (cammarus montezuamae)
-acocote m
-acocote m, calabazo seco que sirve para sacar el pulque.
-Acolman (Lugar donde se dobla el agua), estado de México.
-Acolmiztli (Brazo de puma), dios del inframundo azteca.
-acomedido, solidario
+achiote
+acierto
+acocil
+acocote
+acocote
+Acolman 
+Acolmiztli 
+acomedido
 acometido 
-acomodarse, ajustarse
+acomodarse
 acompañado
-acompañamiento m
+acompañamiento
 acompañante
-acompañar (nite-)
-acompañar (nitla-)
+acompañar 
+acompañar 
 acongojado
-acongojar (nite-)
+acongojar 
 aconsejado
-aconsejar (nitla-)
+aconsejar 
 acordar
 acordarse
-acordeón m
+acordeón
 acosado
-acosar (nitla-)
-acoso m
-acostado, echado
+acosar 
+acoso
+acostado
 acostarse
-acostarse, torcerse la pared, doblar
+acostarse
 acostumbrado
 acostumbrar
-acrecentar, aumentar (nitla-)
+acrecentar
 acreedor
-acribillar, balacear
-acrópolis f
+acribillar
+acrópolis 
 activo
-acto lésbico m, acto sexual realizado entre mujeres.
-acto m
-Actopan (Lugar sobre la tierra fertil), Hidalgo, Distrito federal y Veracruz.
-actuación f, drama m
+acto lésbico
+acto
+Actopan 
+actuación 
 actualmente
-actuar, hacer drama
-acuarela f
-acuarelas f
-acuario m, lugar donde se exhiben animales acuáticos.
-acuario m, pecera f
+actuar
+acuarela 
+acuarelas 
+acuario
+acuario
 acuático
-acuchillar (nitla-)
-acudir, recirrir
-acueducto m
-acuerdo m
-acuerdo m, concilio m
-acumular, henchir
-acusación f
+acuchillar 
+acudir
+acueducto
+acuerdo
+acuerdo
+acumular
+acusación 
 acusado
 acusante
-acusar (nite-)
-acusar (nitla-)
+acusar 
+acusar 
 adaptado
-adeherir, pegar
+adeherir
 adelantar
 adelante
 adelgazado
-adelgazamiento m
+adelgazamiento
 adelgazar
-adelgazar (nitla-)
+adelgazar 
 además
 adentro
 aderezado
-aderezar (nitla-)
-aderezo m, crema f
-adicionar, sumar
+aderezar 
+aderezo
+adicionar
 adiestrado
-adiestrar, guiar, regir, conducir (nite-)
+adiestrar
 adinerado
-adios, hasta luego
-adivinanza f
+adios
+adivinanza 
 adivinar
-adivino de la tierra m, persona que determina el periodo de la siembra y la cosecha.
-adivino m, mago m, gitano m, astrólogo m
-adjetivo m
-adjetivo m 
+adivino de la tierra
+adivino
+adjetivo
+adjetivo
 adjudicado
-adjudicar (nite-)
-adjudicarse (nite-)
-administración f
+adjudicar 
+adjudicarse 
+administración 
 administrador
-administrador m, contador m, contralor m
+administrador
 administrar
-administrar, alabar, honrar (nite-)
+administrar
 administrativo
 admirable
-admiración f
-admirar (nite-)
-admitido, recibido
-admitir (nitla-)
-admitir, recibir (nitla-)
+admiración 
+admirar 
+admitido
+admitir 
+admitir
 adobar
-adobe m
-adobo m
-adolescencia femenina f
-adolescencia masculina f
+adobe
+adobo
+adolescencia femenina
+adolescencia masculina 
 adolorido
-adonde, donde
-adopción f
+adonde
+adopción 
 adoptado 
-adoptar (nitla-)
-adorable, adorador
-adoración f
+adoptar 
+adorable
+adoración 
 adorar
-adormecer (nitla-)
-adormecer, anestesiar
-adormecido, anestesiado 
-adormecimiento m, nestecia f
+adormecer 
+adormecer
+adormecido
+adormecimiento
 adornado
-adornado, sazonado
-adorno de papel m, gallardete m, estola f
+adornado
+adorno de papel
 adorno m
-adorno m, adornado
-aduana f 
-adueñar, poseer, apropiar
-adulterio m 
-adultero, cornudo
-adultero, cornudo, infiel
+adorno m
+aduana 
+adueñar
+adulterio
+adultero
+adultero
 adulto
 adultos
-adverbio m
-advertir, contar, disciplinar, doctrinar, informar, narrar, reportar (nitla-) 
-adviento m
+adverbio
+advertir
+adviento
 </div>
 
 <div class="nahuatl">
