--- a/index.html
+++ b/index.html
@@ -340,6 +340,315 @@ adultos
 adverbio
 advertir
 adviento
+aérodeslizador
+aerolito
+aeropuerto
+afabilidad
+afamar
+afeitar
+afeitar 
+afeite
+Afganistán
+afgano
+aficionado
+afilado
+afilado
+afilar 
+afirmar 
+afligido
+afligir
+aflojar
+afrentarse de alguien
+Africa
+africano
+afuera
+agachado
+agachar
+agalla de carrizo
+agalla
+agarrar
+agarrar
+agarrarse
+ágata
+agave azul
+agave lechuguilla
+agaves
+agitación
+agitación
+agitado
+agitador
+agitador
+agitar
+aglomerado
+aglomerar
+agonía
+agonizar
+agosto
+agotamiento
+agotamiento
+agotar
+agradable
+agradable
+agradecer
+agradecido
+agradecimiento
+agrícola 
+agricultor
+agricultura
+agrio
+agrupación
+agrupar
+agrura
+agruras
+agua caliente
+agua de frutas
+agua de nixtamal
+agua deliciosa
+agua dulce
+agua encharcada
+agua estancada
+agua fría
+agua golpeada
+agua helada
+agua mineral
+agua oxigenada
+agua potable
+agua pueríficada
+agua salada
+agua salitrosa
+agua sucia
+agua termal
+agua turbia
+aguacate grande
+aguacate
+aguacate sivestre
+aguacatero
+aguacates
+aguado
+aguador
+aguamiel 
+aguamiel
+aguanieve
+aguantado
+aguardar 
+aguardiente
+aguardiente
+aguas
+Aguascalientes
+aguautle
+agudeza
+agudo
+agüero
+aguijón
+águila arpía
+águila calva
+águila
+águila pie barrado
+águila quebrantahuesos
+águila real
+Águila Roja
+águila solitaria
+aguilucho
+aguja
+aguja
+agujerado
+agujerado
+agujerado
+agujerar 
+agujerito
+agujero
+agujero
+agusanado
+agusanar 
+agusanarse
+agustino
+ahí
+ahijada
+ahijado
+ahogado
+ahogar
+ahogarse
+ahora
+ahora mismo
+ahorcado
+ahorcar
+ahorrador
+ahorrar 
+ahorro
+Ahuacatlán 
+Ahuachapán 
+ahuecado
+ahuehuete
+Ahuitzotl 
+ahumado
+ahumar
+ahumar 
+ahuyentar
+ahuyentar 
+aire caliente
+aire frío
+aires
+aislado
+aislar
+aislar 
+Ajacuba 
+ajedrez
+ajeno
+ajo 
+Ajoloapan 
+ajolote
+ajonjolí
+Ajusco 
+ajustar
+al contrario 
+al día siguiente
+al final de 
+al lado
+al menos
+al momento
+al norte
+al oriente
+al otro lado del camino 
+al otro lado
+al reves
+al sur
+al sur 
+ala
+ala
+alabanza
+alabar
+alabastro
+alacena
+alacranes
+alado
+alambre
+alambre
+álamo blanco
+álamo canadiense
+álamo negro
+alarife
+alas
+Alaska
+alaskeño
+albanés
+Albania
+albañil
+albañil
+albañil
+albaricoque
+alberca
+alberca
+albergar
+albergue
+albino
+alborotador
+alborotar
+alboroto del agua
+alboroto
+albur
+alcahuete
+alcalde
+alcaldesa
+alcance
+alcanfor
+alcanzar 
+alce
+alcohol
+alcohólico
+alcornoque 
+alegrar
+alegrar a otro 
+alegrar
+alegre
+alegría
+alejandría
+aleluya
+alemán
+Alemania
+alergico
+aletear
+alfabeta
+alfabetizar
+alfabeto
+alfabeto ortográfico
+alfarero 
+alfil
+alfiler
+alfombra
+alforja
+alga lacustre
+algo más
+algo
+algo
+algodón 
+algodón
+algodón pardo
+alguien
+alguien
+algún asunto
+algún
+algunas
+alguno
+algunos
+alhaja
+alhaja
+alhóndiga
+alineación
+aliento
+aliento
+aliento
+alimentación
+alimentar 
+alimento
+alisar
+alisar 
+aliviado
+alivio
+aljaba
+aljibe
+aljibe
+aljibes
+aljófar
+aljófar
+allá
+allende
+allende
+allí
+allí mismo
+alma
+alma
+almacén
+almeja
+almena
+almidón
+almohada
+almohada
+Almoloya 
+almuerzo
+aloe
+alojador
+alojamiento
+alpaca
+alpaca
+alpinismo
+alpino
+alquilar
+altar de cráneos
+altar
+alteración
+alterar 
+alto 
+alumbramieto
+alumbrar
+aluminio
+alumno
+alumno
+alumno
+alumnos
+aluvión
+alza de precios
+alzado
+alzar
 </div>
 
 <div class="nahuatl">
@@ -646,6 +955,315 @@ huehueyimeh
 cauhtic
 nonotza 1
 huallaliztli
+ehecatlapalqui
+citlalminatetl
+ehecalquixoayan
+ecpilticayotl
+tenehua 1
+xahua
+xima 2
+xahualli
+Afgania
+afganitl
+itechmomaqui
+tenitztic
+huitztic
+tentia
+tohua
+chichinatzalli
+chichinatza
+molonia
+ixmalia
+Africa
+africatl
+quihuac
+pixtoc
+pixtoa
+acatemetl
+nacazcolotl
+aana 1
+mapiqui 1
+quitzquia
+xicalchalchihuitl
+texometl
+metontli
+memeh
+etzontiliztli
+tlaneloliztli
+etzontli
+etzonqui
+tlaneloni
+etzona
+huipani
+huipana
+nemocihuiliztli
+atlaza
+agoxto
+ahuatzaliztli
+cocoxcayotl
+ahuatzi
+tepac
+cemelle
+tlazohcamati 1
+tlazohcamatilli
+tlazohcamatiliztli
+millacayo
+milpixqui
+millacayotl
+xococ
+ololohuiztli
+ololohua
+xocoliztli
+elchichinatl
+atotonqui
+xocoatl 2
+nexayotl
+ahuelic
+chipahuacatl
+atecochatl
+apolatl
+acecec
+chapalli
+itzticatl
+ameyalatl
+aayoliztli
+yecatl
+achipahuatl
+poyecatl
+tequixquiatl
+atzoatl
+atotonilli
+tezatl
+pahuatl
+ahuacatli
+chichicahuacatli
+ahuacacuahuitl
+ahuacatin
+apaltic
+amacac 1
+tecuatl
+menecuhtli
+acetl
+ehuatoc
+pielia
+iliztli
+atletl
+aa
+Aguascalientes
+ahuauhtli
+tenaccayotl
+tenatic
+tetzauhtli
+tlimiuhqui
+tecolocuauhtli
+iztacuauhtli
+cuauhtli
+itzcuauhtli
+tlecuauhtli
+quetzalcuauhtli
+Chichilcuauhtli
+tlilcuauhtli
+cuauhconetl
+itzmitl 2
+coyolomitl
+coyonilli
+coyoctic
+coyonqui
+colonia 3
+tlacoyocton
+calactli
+coyoctli
+tlaocuilli
+ocuilia
+chacalihui
+Agustín teopixqui
+oncan
+cihuacomconetl
+teopanquixtipilli
+atlamiquini
+atlamiqui
+atlahua
+axan
+niman axcan
+tlamecanilli
+mecania
+tlatlacuittani
+tlacuitta
+tlatlacuittaliztli
+Ahuacatlan
+Ahuachanpan
+tepantli 1
+ahuehuetl
+Ahuitzotl 2
+puchehuac
+pochehua
+pochehui
+ixpehui
+totoca
+ehecatotonic
+ehecacecec
+ehecameh
+anacmozatlani
+atzacua
+iconi
+Axacopan
+cuapatolli
+tetlatquini
+coznacatl
+Axoloapan
+axolotl
+axolli
+Axochico
+namiqui 1
+icuepca mochiuhtica
+imoztlatica
+itlamia
+-tlan
+nencan
+achitonca
+amictlampa
+tlauhcopa
+nepa ohtli
+centlapa
+zanicuepa
+huitztlampa
+ihuitztlampa
+maznecapalli
+aztli
+teocuicatl
+tenehua 2
+tecalli 1
+cuauhtlahuancalli
+colomeh
+aztitoc
+mecatepoztli
+tepozmecatl
+chilcolcuahuitl
+cozcuahuitl
+chopotl
+calquetzqui
+azmeh
+Alazcac
+alaztecatl
+albaniatl
+Albania
+calquetzani
+tlaquitqui 1
+calchiuhqui
+chahuacuahuitl
+atecaxmatemaloyan
+acaxitl
+celia 2
+tecililoyan
+tlacataztalli
+acomanani
+acomana
+atlanonotzalli
+acomanaliztli
+patolzazanilli
+tetlanochilli
+altepetlahtoani
+altepecihuatlahtoani
+aiuhteittaliztli
+anacuahuitl
+aci 1
+mazamiztli
+techichic
+techihuicqui
+ahuazonectli
+yolpaqui
+paquilia
+paqui 1
+aahuiani
+pacyotl 1
+cacaloxochitl
+aleluya
+teutotl
+Teutotitlan
+chincualnematini
+papantlaca
+amoxmatqui
+machiotlahtoa
+tlahtolmelauhcan
+tlacuilolmachiotlahtolli
+tepalcatecatl
+yaocuachpanitqui
+tilmazoani
+palpetlatl
+ehuaxiquipilli
+atexontli
+occe tlamantli
+itla
+achi
+cotomitl 1
+ichcatl 1
+coyoichcatl
+acah
+ac
+achitlamentli
+cequi
+cequimeh
+aca
+acameh 2
+caltlatlaquitl
+chichetl
+tlaocentlatiloyan
+pantiliztli
+ihyotl
+acohuetziliztli
+pocyotl
+tlacualli
+cualtia
+tonacatotl
+xitlatzoa
+petzohua
+tecehuilli
+tecehuiliztli
+micomitl
+atecochtlalli
+atlalilli
+atecochtlaltin
+epyollopicilli
+acitlalli
+ompa
+analco
+analli
+nepa
+zan oncan
+elhuayotl
+tetonalli
+tlapiacalli
+atexacatl
+altepetenancoyoctli
+tlatexotl
+tzonicpalli
+cuachicpalli
+Almoloyan
+tenizaloni
+huitzmetl
+teciliani
+teciliztli
+alpacatl
+hueyichcatl
+tepetiliztli
+tepeyo
+tlaquehua
+tzompantli 1
+momoztli
+necomoniliztli
+colonia 1
+cuauhtic
+pilhuatiyotl
+tlahuilia
+tepozcuitlatl
+nemachtlapouhqui
+tlamachtilli
+momachtli
+tlamachtiltin
+axachtli
+patihuayotl
+acoquitzquilli
+acohui
 </div>	 
 		 
 	 </body>
