--- a/index.html
+++ b/index.html
@@ -649,6 +649,242 @@ aluvión
 alza de precios
 alzado
 alzar
+amabilidad
+amable
+amable
+amada doncella
+amada mujer
+amada señora
+amado amigo
+amado hijo
+amado señor
+Amajac 
+Amalucan 
+amamantado
+amamantar
+amanecer
+amanecer
+amanecer
+amar 
+amaranto 
+amargo
+amargoso
+amarillarse
+amarillento
+amarillo
+amarillo claro
+amarillo medio
+amarillo medio
+amarillo ocre
+amarillo
+amarillo
+amarrado
+amarrar
+amasar
+amate
+Amatepec 
+Amatitlan 
+Amatlán 
+ámbar
+ambidiestro
+Amealco 
+Amecameca 
+amén
+amenaza
+amenazado
+amenazar
+América
+americano 
+americanos
+amiga
+amigable
+amigo de corazón benévolo
+amigo
+amiguito
+amiguitos
+Amimitl 
+amistad
+amistad
+amistoso
+amo
+amollar
+amonestación
+amonestado 
+amonestar 
+amontonado
+amontonar
+amor egoísta
+amor
+amordazado
+amordazar 
+amparado
+amparo
+ampliar
+amplio
+ampolla
+Ámsterdam
+anafre
+anafrodisia
+anal
+Analco 
+analfabetizmo
+análisis
+analizado
+analizar
+anatomía
+ancho
+anchura
+anciano
+ancla
+andalucí
+Andalucía
+andaluz
+andamio
+andar
+andar herguido
+andar ocupado
+andariego
+Andorra
+andorrano
+andrajo
+anegado
+anemia
+anémico
+anfitrión
+ángel
+anglicano
+Angola
+angoleño
+angosto
+anguila
+ángulo
+angustia
+angustiado
+angustiar
+anhelar 
+anillas para gimnasta
+anillo de compromiso
+anillo
+ánima
+animal acuático
+animal de carga
+animal doméstico
+animal
+animal salvaje
+animal volador
+animalejo
+animales
+animalillo
+animalito
+animar
+aniquilar 
+aniversario
+ano
+anorak
+ante
+anteantier
+anteayer
+anteayer 
+antebrazo
+anterior
+antes
+antes
+antier
+antifaz
+antigua cultura mexicana
+Antigua y Barbuda
+antiguamente
+antigüedad
+antiguo
+antílope
+antojadizo
+antojar 
+antojería
+antojo
+antorcha
+antropología
+antropólogo
+antropomorfo
+anuario
+anzuelo
+añadidura
+añadir 
+añadir
+añadirse
+añil
+año
+año nuevo cristiano 
+años
+apache
+apagador
+apagar
+aplaudir
+Apan 
+apapachar
+aparato circulatorio
+aparato digestivo
+aparato excretor
+aparato
+aparato reproductor femenino
+aparcamiento
+apareado
+apareamiento
+aparear 
+aparecer
+aparecido
+aparecido
+apartado
+apartado
+apartar
+apartarse de alguién
+aparte
+apasionar
+Apatzingán 
+Apaxco 
+apedrear 
+apenas
+apéndice
+apestar 
+apeste
+apestoso
+apicultor
+apilar 
+apisonar 
+Apizaco 
+aplastar
+aplastar
+aplastarse
+apolillarse
+aportado
+aportar
+apóstol
+apoyo
+apreciado
+apreciar 
+aprecio
+aprender
+aprender 
+aprender
+aprendido
+apresiado
+apresiar
+apretado
+apretado
+apretar
+apretar 
+apretarse
+aprisionar
+aprobación
+aprobado
+aprobar
+apropiado
+apropiarse
+apuesto
+apuntado
+apuntar
+aquel por quien se vive
+aquellos que
+aquí
 </div>
 
 <div class="nahuatl">
@@ -1264,6 +1500,242 @@ axachtli
 patihuayotl
 acoquitzquilli
 acohui
+yecnacayotl
+yamancac
+tlazohtli
+cihuapiltzin
+cihuatzin
+cihuatecuhtzin
+icniuhtzin
+piltzin
+tecutzin
+Amaxac
+Amalocan
+chichitilli
+chichiti
+tlaneci
+tlanezcayotl
+tlahuilli
+tlazohtla
+huauhtli
+chichiliztli 1
+chichictic
+cozahui
+cozahuac
+coztli
+iztacoztic
+cozauhtic
+cozauhqui
+tecozauhtic
+coztli
+coztic
+ilpitoc
+ilpia
+texhui
+amacuahuitl
+Amatepec
+Amatitlán
+Amatlan
+cozahuitl
+necocmomatqui
+Ameyalco
+Amaquemecan
+mayuhmochihua
+atemauhtiliztli
+atemauhtilli
+atemauhtia
+America
+amerinecatl
+Ixachitlacah
+cihuaicniuhtli
+icniuhtiloni
+icnoyohuani
+icniuhtli
+icniuhpilli
+icniuhpipil
+Amimitl
+icniuhyotl
+cemicniuhyotl
+icniuhyo
+tlacahuac
+molehua
+teyolmaxilitiliztli
+teyolmaxilitilli
+yolnaxilitia
+tentoc
+tentoca
+chahuaztli
+tlazohtlaliztli
+ahuellatoani
+ahuellatoa
+tlayualli
+netontliliztli
+coyahua
+patlahuac
+axitomoctli
+Ansterdania
+tlecaxitl
+tlanictiliztli
+yohuicuic
+Analco
+amatquiyotl
+ihitlacoliztli
+ihitlacolli
+ihitlacoa
+tonacayoliztli
+coyahuac
+patlahuaztli
+huehuetini
+acachicolli
+andaloxi
+Andaloxia
+andaloxnecatl
+tlapechtli
+manenemi
+aquetztinemi
+pachotinemi
+amomotlaliani
+Andorra
+andorratl
+tilmazolli
+tlaaqui
+tolichtli
+tolichtic
+tlacuanotzqui
+anxelli
+anglitlaltecatl
+Angollan
+angoltecatl
+tzoltic
+coamichin
+campa 1
+netlamachiliztli
+netlamachiliani
+netlamachia
+teocihui
+neyecomaxitlaztli
+maxitlaztli
+cozcatl 3
+yoliliztli
+atlanemini
+yolcacualli
+tlacaciuhnemini
+yolcatl
+tecuani
+papantlanemini
+yolcapolli
+yolcameh
+yolcatontli
+yolcatzintli
+yolomatca
+atletia 1
+cenhuahuetiliztli
+cexihuitl
+ecatzacuilli
+ixpan
+eyopan
+yeohuilpa
+yehuiptla
+acolmaitl
+achtopan
+achtotipan
+achto
+yahuiptla
+amayacatl
+huehuemexicayotl
+Antihua ihuan Barbuda
+amoquincantin
+neneyotl
+huehcani
+cuacuauhmazatl
+neicoltini
+icoltia
+neicolhuayan
+neicoltiliztli
+ocopilli
+tlacayomatiliztli
+tlacayomatini
+tlacamachiyo
+xiuhpohualli
+tepozcololli
+tlatlapilhualiztli
+tlapilhuilia
+axiltia 2
+zalihui
+xiuhquilitl
+xihuitl 1
+yancuixihuitl
+xiuhtin
+apachtli
+tlazehuiani
+cehui
+matzatzini
+Apan
+apapachoa
+ezpanquetl
+itipanquetl
+axixtecomacayotl
+huaztli
+tepilyotl
+tepozmalacatlalyocan
+tlapotilli
+tlapotiliztli
+potia
+neci
+necitli
+huelittaloni
+tlacuanilli
+xelotoc
+cuania
+icuania
+amo ceccan
+comoni
+Apantzincan
+Apazco
+tehuilia
+quemach
+pilli 2
+potonia
+potoniliztli
+potoniyo
+mimiauhtecatl
+panoa
+peni
+Apitzauhco
+patzmiqui
+tepachohua
+patlachihua
+ehemi
+ihcuailli
+ihcuailia
+apoxtolli
+tlacuauhnapaloliztli
+huelcamatilli
+huelcamati
+huelcamatiliztli
+tzaloa
+zalohua
+tlazalohua
+tlamachtilo
+tlanteyotilli
+tlanteyotia
+tlamapiquilli
+tlapacholli
+tilinia
+linia
+mixtilinaltia
+malcochoa
+yolnanquliztli
+yolnanquililli
+yolnanquilia
+inamic
+techtia
+huelneci
+axiltilli
+axiltia 3
+ipoalnemoani
+ahquihuan
+nican
 </div>	 
 		 
 	 </body>
